Fixed NumberInput layout problem

--- a/src/components/NumberInput/NumberInput.scss
+++ b/src/components/NumberInput/NumberInput.scss
@@ -23,7 +23,6 @@
   vertical-align: top;
 }
 .inputHintWrapper{
-  margin-top: 10px;
   color: $red;
   font-size: 14px;
 }
